--- a/_frc/4700/4780.md
+++ b/_frc/4700/4780.md
@@ -7,12 +7,13 @@ team:
   rookie_year: 2013
   location: Cleveland, Ohio, USA
   sponsors:
-  - Constellation Schools
+  - 'Constellation Schools'
   - 'NASA Glenn Research Center: Office of Education'
-  - Apex Family Foundation
-  - 'Constellation Schools: Parma Community'
+  - 'Marco's Pizza'
   links:
     Website: http://www.team4780.com
 ---
 
-{% include remove_this_line_and_add_a_paragraph %}
+Constellation Robotics is an organization made up of students and staff of Parma Community High School. We have competed in a variety of different competitions, but our main focus is FRC. We are team 4780, the Tenacious Drones.  We got our start in December of 2012, when a parent suggested that our Science Club get involved in FRC. Our teachers looked into it and thought it was a cool idea, so they registered us for the Buckeye Regional. Our 2 science teachers at the time went to Tri-C on kickoff day to get our kit of parts. Soon afterward, we had our first official meeting. We jumped into FRC head-first, learning as we went along. Our team was about 9 kids, with 2 parents involved. Our rookie year was rough, but somehow, we managed to get a robot put together and working by bag and tag night. I don't think that anyone knew what we were in for when we decided to sign up, but we made it work, and it paid off. Since then, our team has evolved a lot. We've found several sponsors, and several mentors who have continued to support us these past 6 
+
+"Destination Deep Space" is the name of the game this year. With over 15 active and lively members, the Tenacious Drones are ready for another year of the FRC competitions! After watching the 2019 robotics teaser, our team was very intrigued! This year is based off space exploration, rockets, and more! This year will definitely be a fun one. Check our photo gallery for pictures, videos, and trailers for the 2019 Deep Space season!
